feat: add view, edit profile & upload avatar
